--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@ layout: default
             <ul>
             {% for post in site.posts %}
                 <li>
-                    {{ page.date | date: "%B"}}
-                    {{ page.date | date: "%d"}},
-                    {{ page.date | date: "%Y"}}
+                    {{ post.date | date: "%B"}}
+                    {{ post.date | date: "%d"}},
+                    {{ post.date | date: "%Y"}}
                     <a href="{{ post.url }}">{{ post.title }}</a> 
                 </li>
             {% endfor %}
