--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ layout: default
 			<div class="content">
 		    	{{ post.content | preview }}
 		    </div>
+		    <a href="{{post.url}}">Les mer</a>
 	    </article>
 	</li>
 	<li class="clearfix">
