…og oversatt den til engelsk

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: default
 			<div class="content">
 		    	{{ post.content | preview }}
 		    </div>
-		    <a href="{{post.url}}">Les mer</a>
+		    <a href="{{post.url}}">Read more</a>
 	    </article>
 	</li>
 	<li class="clearfix">
