separator over pagineringslinker

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: default
 		    <a href="{{post.url}}">Read more</a>
 	    </article>
 	</li>
-	<li class="clearfix">
+	<li class="pagination clearfix">
 	{% endfor %}
 		{% if paginator.next_page %}
 			<nav class="older-posts">
